--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -39,57 +39,27 @@ workflows:
       - name: 🔢 Auto increment version & build number
         script: |
           INFO_PLIST=$INFO_PLIST_PATH
-
           CURRENT_VERSION=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$INFO_PLIST" || echo "1.0.0")
           CURRENT_BUILD=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$INFO_PLIST" || echo "0")
-
           IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
           NEW_PATCH=$((patch + 1))
           NEW_VERSION="${major}.${minor}.${NEW_PATCH}"
           NEW_BUILD=$((CURRENT_BUILD + 1))
-
           echo "🔧 Updating Info.plist → Version=$NEW_VERSION Build=$NEW_BUILD"
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $NEW_VERSION" "$INFO_PLIST"
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $NEW_BUILD" "$INFO_PLIST"
 
-      - name: 🏗️ Build iOS IPA for App Store
+      - name: 🏗️ Build iOS IPA (Flutter)
         script: |
-          echo "🚀 Building iOS archive..."
-          mkdir -p build/ios/archive
-          xcodebuild \
-            -workspace ios/Runner.xcworkspace \
-            -scheme Runner \
-            -configuration Release \
-            -destination 'generic/platform=iOS' \
-            -archivePath build/ios/archive/Runner.xcarchive \
-            DEVELOPMENT_TEAM="$APP_STORE_CONNECT_TEAM_ID" \
-            PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" \
-            clean archive CODE_SIGN_STYLE=Automatic | xcpretty
+          echo "🚀 Building iOS IPA with Flutter..."
+          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
+          echo "✅ IPA built successfully!"
 
-          echo "📦 Exporting IPA..."
-          xcodebuild -exportArchive \
-            -archivePath build/ios/archive/Runner.xcarchive \
-            -exportOptionsPlist <(cat <<EOF
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-            <key>method</key><string>app-store-connect</string>
-            <key>teamID</key><string>$APP_STORE_CONNECT_TEAM_ID</string>
-            <key>signingStyle</key><string>automatic</string>
-            <key>uploadSymbols</key><true/>
-            <key>compileBitcode</key><false/>
-          </dict>
-          </plist>
-          EOF
-          ) \
-            -exportPath build/ios/ipa | xcpretty
-
-      - name: 🚀 Upload to App Store Connect (TestFlight)
+      - name: 🚀 Upload to App Store Connect
         script: |
           IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           if [ -z "$IPA_PATH" ]; then
-            echo "❌ No IPA found!"
+            echo "❌ No IPA found! Check build logs."
             exit 1
           fi
           echo "📤 Uploading $IPA_PATH to App Store Connect..."
