--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -41,32 +41,39 @@ workflows:
           INFO_PLIST=$INFO_PLIST_PATH
           CURRENT_VERSION=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$INFO_PLIST" || echo "1.0.0")
           CURRENT_BUILD=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$INFO_PLIST" || echo "0")
+
           IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
           NEW_PATCH=$((patch + 1))
           NEW_VERSION="${major}.${minor}.${NEW_PATCH}"
           NEW_BUILD=$((CURRENT_BUILD + 1))
-          echo "🔧 Updating Info.plist → Version=$NEW_VERSION Build=$NEW_BUILD"
+
+          echo "🔧 Updating Info.plist → Version: $NEW_VERSION | Build: $NEW_BUILD"
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $NEW_VERSION" "$INFO_PLIST"
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $NEW_BUILD" "$INFO_PLIST"
+
+          echo "✅ Updated to Version=$NEW_VERSION Build=$NEW_BUILD"
 
       - name: 🚀 Upload to TestFlight (App Store Connect)
         script: |
           echo "🔍 Searching for IPA in all possible locations..."
+
+          # Check the most common export folder first
           IPA_PATH=$(find /Users/builder/clone/build/ios/ipa -name "*.ipa" 2>/dev/null | head -1)
 
+          # Fallback: check Flutter output folders
           if [ -z "$IPA_PATH" ]; then
-            echo "⚠️ IPA not found in /Users/builder/clone/build/ios/ipa. Searching Flutter paths..."
+            echo "⚠️ Not found in /Users/builder/clone/build/ios/ipa, checking local Flutter paths..."
             IPA_PATH=$(find build/ios/iphoneos -name "*.ipa" 2>/dev/null | head -1)
           fi
 
+          # Fallback: Codemagic tmp
           if [ -z "$IPA_PATH" ]; then
-            echo "⚠️ Still no IPA found. Checking for Flutter's default export folder..."
             IPA_PATH=$(find /tmp -name "*.ipa" 2>/dev/null | head -1)
           fi
 
           if [ -z "$IPA_PATH" ]; then
-            echo "❌ No IPA file found anywhere. Build likely succeeded but export path changed."
-            echo "🧠 Tip: Check the 'Artifacts' tab in Codemagic for the IPA file path."
+            echo "❌ No IPA found! Please verify build step output or artifacts."
+            echo "Tip: check 'Artifacts' tab to confirm the path."
             exit 1
           fi
 
@@ -78,7 +85,7 @@ workflows:
             --submit-for-testflight true \
             --groups "LevelUpSports"
 
-          echo "✅ Successfully uploaded and submitted to TestFlight group: LevelUpSports"
+          echo "✅ Successfully uploaded to TestFlight and submitted to 'LevelUpSports' testers."
 
 
 
