--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -52,18 +52,35 @@ workflows:
 
       - name: 🏗️ Build IPA for App Store Connect
         script: |
-          echo "🚀 Building IPA..."
-          flutter build ipa --release
-          echo "✅ IPA build completed successfully."
+          echo "🚀 Building Flutter IPA for App Store..."
+          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist || {
+            echo "❌ Flutter build failed"
+            exit 1
+          }
+
+          echo "✅ IPA build complete. Searching output..."
+          find build/ios -name "*.ipa" || echo "⚠️ No .ipa visible here yet."
 
       - name: 🚀 Upload to TestFlight (App Store Connect)
         script: |
           echo "🔍 Searching for IPA file..."
-          IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
+          IPA_PATH=$(find build/ios -name "*.ipa" | head -1)
 
           if [ -z "$IPA_PATH" ]; then
-            echo "❌ No IPA file found under build/ios/ipa/"
-            echo "🔎 Checking Artifacts tab in Codemagic is recommended."
+            echo "⚠️ No IPA found, trying xcarchive export..."
+            ARCHIVE_PATH=$(find build/ios/archive -name "*.xcarchive" | head -1)
+            if [ -n "$ARCHIVE_PATH" ]; then
+              echo "📦 Found archive at $ARCHIVE_PATH, exporting IPA..."
+              xcodebuild -exportArchive \
+                -archivePath "$ARCHIVE_PATH" \
+                -exportPath build/ios/ipa \
+                -exportOptionsPlist ios/ExportOptions.plist
+              IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
+            fi
+          fi
+
+          if [ -z "$IPA_PATH" ]; then
+            echo "❌ Still no IPA found. Please check build logs or Artifacts."
             exit 1
           fi
 
@@ -75,10 +92,10 @@ workflows:
             --submit-for-testflight true \
             --groups "LevelUpSports"
 
-          echo "✅ Successfully uploaded to TestFlight group 'LevelUpSports'."
+          echo "✅ Successfully uploaded and submitted to TestFlight group 'LevelUpSports'."
 
     artifacts:
-      - build/ios/ipa/*.ipa
+      - build/ios/**/*.ipa
       - /tmp/xcodebuild_logs/*.log
 
     publishing:
