--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -50,32 +50,62 @@ workflows:
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $NEW_BUILD" "$INFO_PLIST"
           echo "✅ Updated to Version=$NEW_VERSION Build=$NEW_BUILD"
 
-      - name: 🏗️ Build IPA for App Store Connect
+      - name: 🏗️ Build and export IPA
         script: |
-          echo "🚀 Building Flutter IPA for App Store..."
-          flutter build ipa --release
-          echo "✅ IPA build complete."
-          find build/ios -name "*.ipa" || echo "⚠️ No IPA visible yet."
+          echo "🚀 Building Flutter IPA..."
+          flutter build ipa --release || {
+            echo "❌ Flutter build failed!"
+            exit 1
+          }
 
-      - name: 🚀 Upload to TestFlight (App Store Connect)
-        script: |
-          echo "🔍 Searching for IPA file..."
-          IPA_PATH=$(find build/ios -name "*.ipa" | head -1)
+          echo "📦 Checking for archive..."
+          ARCHIVE_PATH=$(find build/ios/archive -name "*.xcarchive" | head -1)
+          if [ -z "$ARCHIVE_PATH" ]; then
+            echo "⚠️ No .xcarchive found, trying to locate IPA directly..."
+            IPA_PATH=$(find build/ios -name "*.ipa" | head -1)
+          else
+            echo "📦 Found archive: $ARCHIVE_PATH"
+            mkdir -p build/ios/ipa
+            echo "📤 Exporting IPA from archive..."
+            xcodebuild -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath build/ios/ipa \
+              -allowProvisioningUpdates \
+              -exportOptionsPlist <(cat <<EOF
+              {
+                "method": "app-store",
+                "uploadBitcode": false,
+                "uploadSymbols": true,
+                "signingStyle": "manual",
+                "stripSwiftSymbols": true,
+                "teamID": "$APP_STORE_CONNECT_TEAM_ID"
+              }
+EOF
+              )
+          fi
 
+          IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           if [ -z "$IPA_PATH" ]; then
-            echo "❌ No IPA file found after build. Please check 'Artifacts' tab."
+            echo "❌ IPA export failed. Please check xcode logs."
             exit 1
           fi
 
-          echo "✅ Found IPA: $IPA_PATH"
-          echo "📤 Uploading to TestFlight..."
+          echo "✅ IPA ready at: $IPA_PATH"
+
+      - name: 🚀 Upload to TestFlight
+        script: |
+          IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
+          if [ -z "$IPA_PATH" ]; then
+            echo "❌ No IPA found to upload!"
+            exit 1
+          fi
+          echo "📤 Uploading $IPA_PATH to TestFlight..."
           app-store-connect upload \
             --path "$IPA_PATH" \
             --use-latest-version \
             --submit-for-testflight true \
             --groups "LevelUpSports"
-
-          echo "✅ Successfully uploaded to TestFlight group 'LevelUpSports'."
+          echo "✅ Upload complete!"
 
     artifacts:
       - build/ios/**/*.ipa
