--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -67,20 +67,18 @@ workflows:
             echo "📦 Found archive: $ARCHIVE_PATH"
             mkdir -p build/ios/ipa
             echo "📤 Exporting IPA from archive..."
-            echo '
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-  <key>method</key><string>app-store</string>
-  <key>uploadBitcode</key><false/>
-  <key>uploadSymbols</key><true/>
-  <key>signingStyle</key><string>manual</string>
-  <key>stripSwiftSymbols</key><true/>
-  <key>teamID</key><string>'"$APP_STORE_CONNECT_TEAM_ID"'</string>
-</dict>
-</plist>
-            ' > exportOptions.plist
+            echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\
+<!DOCTYPE plist PUBLIC \"-//Apple//DTD PLIST 1.0//EN\" \"http://www.apple.com/DTDs/PropertyList-1.0.dtd\">\
+<plist version=\"1.0\">\
+<dict>\
+  <key>method</key><string>app-store</string>\
+  <key>uploadBitcode</key><false/>\
+  <key>uploadSymbols</key><true/>\
+  <key>signingStyle</key><string>manual</string>\
+  <key>stripSwiftSymbols</key><true/>\
+  <key>teamID</key><string>${APP_STORE_CONNECT_TEAM_ID}</string>\
+</dict>\
+</plist>" > exportOptions.plist
 
             xcodebuild -exportArchive \
               -archivePath "$ARCHIVE_PATH" \
@@ -95,6 +93,7 @@ workflows:
             exit 1
           fi
           echo "✅ IPA ready at: $IPA_PATH"
+
 
       - name: 🚀 Upload to TestFlight
         script: |
