--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
     instance_type: mac_mini_m2
 
     integrations:
-      app_store_connect: SabihKey
+      developer_portal: SabihKey
 
     triggering:
       events:
@@ -19,6 +19,8 @@ workflows:
       ios_signing:
         distribution_type: app_store
         bundle_identifier: com.example.levelUpSport
+        provisioning_profile: Sabih_levelUpSport
+        certificate: SabihSiddiqui
       xcode: latest
       cocoapods: default
       vars:
@@ -53,52 +55,18 @@ workflows:
       - name: 🏗️ Build and export IPA
         script: |
           echo "🚀 Building Flutter IPA..."
-          flutter build ipa --release || {
+          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist || {
             echo "❌ Flutter build failed!"
             exit 1
           }
 
-          echo "📦 Searching for archive..."
-          ARCHIVE_PATH=$(find build/ios/archive -name "*.xcarchive" | head -1)
-          if [ -z "$ARCHIVE_PATH" ]; then
-            echo "⚠️ No .xcarchive found, trying to locate existing IPA..."
-            IPA_PATH=$(find build/ios -name "*.ipa" | head -1)
-          else
-            echo "📦 Found archive: $ARCHIVE_PATH"
-            mkdir -p build/ios/ipa
-            echo "📤 Exporting IPA from archive..."
-
-            cat > exportOptions.plist <<EOF
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-            <key>method</key><string>app-store</string>
-            <key>uploadBitcode</key><false/>
-            <key>uploadSymbols</key><true/>
-            <key>signingStyle</key><string>manual</string>
-            <key>stripSwiftSymbols</key><true/>
-            <key>teamID</key><string>${APP_STORE_CONNECT_TEAM_ID}</string>
-          </dict>
-          </plist>
-          EOF
-
-            xcodebuild -exportArchive \
-              -archivePath "$ARCHIVE_PATH" \
-              -exportPath build/ios/ipa \
-              -exportOptionsPlist exportOptions.plist \
-              -allowProvisioningUpdates
-          fi
-
+          echo "📦 Searching for IPA..."
           IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           if [ -z "$IPA_PATH" ]; then
-            echo "❌ IPA export failed. Please check logs."
+            echo "❌ No IPA found in build output."
             exit 1
           fi
           echo "✅ IPA ready at: $IPA_PATH"
-
-
-
 
       - name: 🚀 Upload to TestFlight
         script: |
