--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -22,14 +22,28 @@ workflows:
       - name: Clean Flutter and iOS folders
         script: |
           flutter clean
-          rm -rf ios/Pods ios/Podfile.lock
+          rm -rf ios/Pods ios/Podfile.lock ios/.symlinks
           flutter pub get
 
       - name: Install CocoaPods
         script: |
           cd ios
-          pod install
+          pod deintegrate || true
+          pod cache clean --all || true
+          pod install --repo-update
           cd ..
+          
+      - name: Verify CocoaPods Installation
+        script: |
+          if [ ! -d "ios/Pods" ]; then
+            echo "Error: Pods directory not found after installation"
+            exit 1
+          fi
+          if [ ! -f "ios/Podfile.lock" ]; then
+            echo "Error: Podfile.lock not found after installation"
+            exit 1
+          fi
+          echo "✅ CocoaPods installation verified"
 
       - name: Use provisioning profiles
         script: |
