--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -27,23 +27,33 @@ workflows:
 
       - name: Install CocoaPods
         script: |
-          cd ios
-          pod deintegrate || true
-          pod cache clean --all || true
-          pod install --repo-update
-          cd ..
+          set -e
+          echo "Checking Flutter Generated.xcconfig..."
+          if [ ! -f "ios/Flutter/Generated.xcconfig" ]; then
+            echo "Error: Flutter/Generated.xcconfig not found. Running flutter pub get..."
+            flutter pub get
+          fi
           
-      - name: Verify CocoaPods Installation
-        script: |
-          if [ ! -d "ios/Pods" ]; then
-            echo "Error: Pods directory not found after installation"
+          cd ios
+          echo "Deintegrating existing pods..."
+          pod deintegrate || true
+          echo "Cleaning pod cache..."
+          pod cache clean --all || true
+          echo "Installing pods..."
+          pod install --repo-update --verbose
+          
+          echo "Checking installation results..."
+          if [ ! -d "Pods" ]; then
+            echo "Error: Pods directory not created"
             exit 1
           fi
-          if [ ! -f "ios/Podfile.lock" ]; then
-            echo "Error: Podfile.lock not found after installation"
+          if [ ! -f "Podfile.lock" ]; then
+            echo "Error: Podfile.lock not created"
             exit 1
           fi
-          echo "✅ CocoaPods installation verified"
+          
+          echo "✅ CocoaPods installed successfully"
+          cd ..
 
       - name: Use provisioning profiles
         script: |
